--- a/app/src/main/res/layout/my_new_layout.xml
+++ b/app/src/main/res/layout/my_new_layout.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
+
+    <TextView
+        android:id="@+id/idTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ID"
+        android:textSize="15sp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/countryTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Country"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -21,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="City"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@+id/countryTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +43,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Floors"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cityTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Build Year"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@+id/floorsTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +69,5 @@
         app:layout_constraintTop_toBottomOf="@+id/buildYearTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
